# PyAmadon

./: .gitignore  Amadon.spec  README.md  activate.sh  app_settings.py  document_resolver.py  generate_icons.py  i18n.py  logging_config.py  main.py  main_window.py  mensagens.py  pyproject.toml  settings.json  test_bash.sh  validate_docs.py
.github/workflows/: release.yaml
assets/css/: documentos.css
assets/data/: documentos_tree.json
assets/docs/: Doc001.html  Doc002.html  Doc003.html  Doc004.md  Doc005.html  Doc006.md  Doc010.html  Doc011.html  Doc012.md
assets/fonts/Lato/: OFL.txt
assets/fonts/RobotoCondensed/: LICENSE.txt
assets/js/: documentos.js
docs/: README.md  styles.md  toolbar.md
resources/: messages_pt_BR.json
show_translations/: __init__.py  show_translation.py
tbar_functions/: __init__.py  tbar_0base.py  tbar_ajuda.py  tbar_artigos.py  tbar_assuntos.py  tbar_busca.py  tbar_configuracao.py  tbar_documentos.py
tools/: README.md  __keep__.txt  cleanup_cache.py  dev_readme.md
unit_tests/: README.md  test_show_translation.py
