[project]
name = "Amadon"
version = "0.1.0"
description = "Leitua e estudo do Livro de Urântia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.9.3",
    "markdown2>=2.5.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "pyinstaller>=6.16.0",
    "pytest>=8.4.2",
]
